--- a/consumer.css
+++ b/consumer.css
@@ -129,14 +129,12 @@ body {
     filter: brightness(75%);
     transition: filter 250ms linear;
 }
-@media only screen and (max-width: 992px) {
+@media only screen and (max-device-width: 425px) {
     .content #shih_zoo_download_popup {
         visibility: hidden;
         position: absolute;
         margin-left: auto;
         margin-right: auto;
-        left: 0;
-        right: 0;
         position: absolute;
         margin: auto;
         left: 0;
@@ -145,6 +143,25 @@ body {
         bottom: 0;
         width: 80%;
         height: 40%;
+        background-color: white;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+    }
+}
+@media only screen and (max-device-width: 820px) {
+    .content #shih_zoo_download_popup {
+        visibility: hidden;
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 80%;
+        height: 40% !important;
         background-color: white;
         border-radius: 10px;
         -webkit-border-radius: 10px;
