Fixed mobile formatting of consumer landing page (finally)

--- a/consumer.css
+++ b/consumer.css
@@ -129,26 +129,109 @@ body {
     filter: brightness(75%);
     transition: filter 250ms linear;
 }
-@media only screen and (max-device-width: 425px) {
-    .content #shih_zoo_download_popup {
-        visibility: hidden;
+@media only screen and (max-device-width: 1024px) {
+    .content #shameless_product_placement_logo {
         position: absolute;
-        margin-left: auto;
-        margin-right: auto;
+        height: auto;
+        width: 40%;
+        top: 3%;
+        right: 3%;
+        transition: 250ms linear;
+    }
+    .content #shameless_product_placement_logo:hover {
+        filter: brightness(75%);
+        transition: 250ms linear;
+    }
+    .content #shih_zoo_merchandise {
+        position: absolute;
+        width: 15%;
+        top: 2%;
+        left: 14%;
+        transition: filter 250ms linear;
+    }
+    .content #shih_zoo_merchandise:hover {
+        filter: brightness(75%);
+        transition: filter 250ms linear;
+    }
+    .content #shih_tzu {
+        height: auto;
+        width: 2%;
+        opacity: 0;
         position: absolute;
         margin: auto;
         left: 0;
         right: 0;
         top: 0;
         bottom: 0;
-        width: 80%;
-        height: 40%;
+        animation: scale 3s ease-out;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        animation-delay: 0.1s;
+    }
+    @keyframes scale {
+        0% {
+            transform: scale(1);
+            opacity: 0;
+        }
+        100% {
+            transform: scale(50);
+            opacity: 1;
+        }
+    }
+    .content #shih_zoo_logo {
+        position: absolute;
+        height: auto;    
+        width: 30%;
+        left: 4%;
+        bottom: 22%;
+        transition: 250ms transform linear;
+    }
+    .content #shih_zoo_logo:hover {
+        transform: translate(0px, -10px);
+        transition: 250ms transform linear;
+    }
+    .content #shih_zoo_download_button {
+        height: 60px;
+        transition: 250ms;
+        position: absolute;
+        bottom: 13%;
+        left: 3%;
+        transition: 250ms linear;
+        border-color: black;
         background-color: white;
         border-radius: 10px;
-        -webkit-border-radius: 10px;
+        box-sizing: border-box;
+        color: black;
+        cursor: pointer;
+        font-size: 5vw;
+        line-height: 24px;
+        opacity: 1;
+        outline: 0 solid transparent;
+        padding: 8px 18px;
+        word-break: break-word;
+        border-style: solid;
+        font-family:'Fira Sans';
+        text-decoration: none;
+        filter: drop-shadow(0 5px);
+        transition: transform filter 250ms;
     }
-}
-@media only screen and (max-device-width: 820px) {
+    .content #shih_zoo_download_button:hover {
+        transition: transform filter 250ms linear;
+        transform: translate(0px, 5px);
+        filter: drop-shadow(0 0);
+    }
+    .content #les_dudes_coming_soon {
+        position: absolute;
+        height: auto;
+        width: 30%;
+        right: 4%;
+        bottom: 20%;
+        transition: filter 250ms linear;
+    }
+    .content #les_dudes_coming_soon:hover {
+        filter: brightness(75%);
+        transition: filter 250ms linear;
+    }
     .content #shih_zoo_download_popup {
         visibility: hidden;
         position: absolute;
@@ -161,7 +244,7 @@ body {
         top: 0;
         bottom: 0;
         width: 80%;
-        height: 40% !important;
+        height: 25% !important;
         background-color: white;
         border-radius: 10px;
         -webkit-border-radius: 10px;
@@ -201,19 +284,19 @@ body {
 }
 .content #shih_zoo_download_popup #shih_zoo_download_popup_header {
     display: grid;
-    grid-template-columns: 20% 79%;
+    grid-template-columns: 19% 80%;
     column-gap: 1%;
     margin-left: 2%;
     margin-right: 2%;
     margin-top: 2%;
 }
 .content #shih_zoo_download_popup #shih_zoo_download_popup_header #shih_zoo_app_logo {
-    width: 90%;
+    width: 100%;
     text-align: center;
 }
 .content #shih_zoo_download_popup #shih_zoo_download_popup_header #shih_zoo_download_title {
     font-family: 'MuseoModerno';
-    font-size: 3vw;
+    font-size: 4vw;
     color: black;
 }
 .content #shih_zoo_download_popup #shih_zoo_download_popup_header #shih_zoo_download_text {
