--- a/home.css
+++ b/home.css
@@ -104,29 +104,75 @@ body {
 }
 .content .scrollable_area .serve_section {
     margin-bottom: 10%;
-}
-.content .scrollable_area .serve_section .serve {
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    text-align: center;
-}
-.content .scrollable_area .serve_section .serve .serve_buttons {
-    color: white;
-    font-size: 3vw;
-    font-family: 'Fira Sans';
     margin-left: 1vw;
     margin-right: 1vw;
+    text-align: center;
+}
+.content .scrollable_area .serve_section .serve_header {
+    margin-bottom: 4%;
+}
+.content .scrollable_area .serve_section .serve_header .serve_text {
+    color: white;
+    font-size: 2vw;
+    font-family: 'Fira Sans';
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
+.content .scrollable_area .serve_section .serve_header .serve_button_links {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+}
+.content .scrollable_area .serve_section .serve_header .serve_buttons {
+    color: white;
+    font-size: 2vw;
+    font-family: 'Fira Sans';
     text-align: center;
     transition: 250ms linear;
     border: none;
     background-color: transparent;
+    display: inline;
+    text-decoration: none;
+    font-weight: bold;
 }
-.content .scrollable_area .serve_section .serve .serve_buttons:hover {
+.content .scrollable_area .serve_section .serve_header .serve_buttons:hover {
     filter: brightness(50%);
     transition: 250ms linear;
 }
+.content .scrollable_area .serve_section .serve_information {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+}
+.content .scrollable_area .serve_section .serve_information .serve_images {
+    width: 50%;
+    text-align: center;
+    margin-bottom: 4%;
+}
+.content .scrollable_area .serve_section .serve_information .serve_description {
+    color: white;
+    font-size: 1.25vw;
+    font-family: 'Fira Sans';
+    text-align: left;
+    margin-left: 8%;
+}
 .content .scrollable_area .team_section {
     margin-bottom: 10%;
+}
+.content .scrollable_area .team_section .team_social_media {
+    text-align: center;
+}
+.content .scrollable_area .team_section .team_social_media .team_social_media_icons {
+    display: inline;
+    color: white;
+    font-size: 4vw;
+    text-decoration: none;
+    margin: 4%;
+    transition: 250ms linear;
+}
+.content .scrollable_area .team_section .team_social_media .team_social_media_icons:hover {
+    transition: 250ms linear;
+    filter: brightness(50%);
 }
 .content .scrollable_area .team_section .people {
     display: grid;
@@ -135,6 +181,7 @@ body {
     margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 4%;
+    margin-top: 5%;
 }
 .content .scrollable_area .team_section .people_images {
     width: 100%;
@@ -145,10 +192,21 @@ body {
     color: white;
     text-align: center;
 }
-.content .scrollable_area .section_information {
+.content .scrollable_area .information_section .information_text {
     font-size: 1.2vw;
     font-family: 'Fira Sans';
     color: white;
+}
+.content .scrollable_area .information_section .information_social_media {
+    font-size: 1.5vw;
+    color: white;
+    display: inline;
+    margin-right: 2%;
+    transition: 250ms linear;
+}
+.content .scrollable_area .information_section .information_social_media:hover {
+    filter: brightness(50%);
+    transition: 250ms linear;
 }
 .content .scrollable_area .game_section {
     padding-bottom: 40%;
